TV Syncing fully implemented
New algorithm being used that makes the implementation far cleaner

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -119,7 +119,7 @@
     <string id="1217">Update Movie Collection</string>
     <string id="1218">Sync Movies</string>
     <string id="1219">Update TV Show Collection</string>
-    <string id="1220">Sync seen TV Shows</string>
+    <string id="1220">Sync TV Shows</string>
     <string id="1221">Clean Movie Collection</string>
     <string id="1222">Clean TV Show Collection</string>
 
