--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -10,7 +10,7 @@
 
     <string id="1020">Auto Syncing</string>
     <string id="1021">Auto update Movies at startup</string>
-    <string id="1022">Auto update TV Show Collection at startup</string>
+    <string id="1022">Auto update TV Shows at startup</string>
     <string id="1023">Auto sync seen Movies at startup</string>
     <string id="1024">Auto sync seen TV Shows at startup</string>
     <string id="1025">Auto clean Movies Collection at startup</string>
