--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -75,7 +75,7 @@
 
 
     <!-- Titles -->
-    <string id="200">Trakt Utilities</string>
+    <string id="200">Traktr</string>
     <string id="201">Watchlist</string>
     <string id="202">Recommendations</string>
     <string id="203">Trending Movies / TV Shows</string>
