--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+Version 1.0.0:
+    - Forked version, renamed to traktr
+    - Added frodo support
+    - Added advanced rating support
+
 Version 0.6.5:
     - Changed the logic for pausing to not treat it as a stop in the video
     - Fixed problem where connections to trakt were closed before readin the responce
@@ -22,11 +27,11 @@ Version 0.6.3:
 
 Version 0.6.2:
     - Hotfix: bug that caused trakt connection reuse to throw and exception, this prevented tv show syncing
-    
+
 Version 0.6.1:
     - Fixed (hopefully) major bug where Trakt Utilities prevented xbmc from closing, indefinatly, #91
     - Fixed major bug where items that where already marked as seen where not added to the collection #90
-    - Fixed problems with changed json versions in xbmc #86 & #88 
+    - Fixed problems with changed json versions in xbmc #86 & #88
     - Fixed misc bugs #63, #67, #69, #74, #75, #86, #87
     - Added option to automatically clean the movie/tv collection on trakt
     - Scrobbling seems stable now and Trakt Utilities can be used safely by itself
@@ -140,4 +145,4 @@ Version 0.1:
 ToDo for future versions:
     - option to ask for rating at movie finished
     - option to ask for rating at tvshow episode finished
-        
+
