--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -94,6 +94,6 @@
     <string id="320">Watchlist Movies</string>
     <string id="321">Watchlist TV Shows</string>
 
-    <string id="330">Recommened Movies</string>
-    <string id="331">Recommened TV Shows</string>
+    <string id="330">Recommended Movies</string>
+    <string id="331">Recommended TV Shows</string>
 </strings>
