--- a/repo/script.traktr/changelog.txt
+++ b/repo/script.traktr/changelog.txt
@@ -1,3 +1,7 @@
+Version 1.0.1:
+    - More sane default values
+    - KeyError fix
+
 Version 1.0.0:
     - Forked version, renamed to traktr
     - Added frodo support
