--- a/repo/script.traktr/changelog.txt
+++ b/repo/script.traktr/changelog.txt
@@ -1,6 +1,10 @@
+Version 1.0.2:
+    - Fixed connection refused in xbmc
+    - Massive improvement to the advanced rating window
+
 Version 1.0.1:
-    - More sane default values
-    - KeyError fix
+    - Fixed key error
+    - More sane defaults
 
 Version 1.0.0:
     - Forked version, renamed to traktr
