--- a/repo/script.traktr/changelog.txt
+++ b/repo/script.traktr/changelog.txt
@@ -1,3 +1,6 @@
+Version 1.0.3:
+    - Fixed error
+
 Version 1.0.2:
     - Fixed connection refused in xbmc
     - Massive improvement to the advanced rating window
